...
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          title: '設定',
          tabBarIcon: tabIcon('settings'),
          tabBarButton: tabButton('tab-settings'),
        }}
      />
    </Tab.Navigator>
  );
}

